--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,8 +15,7 @@
     "raf": "^3.4.1",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
-    "react-native-reanimated": "catalog:",
-    "react-native-vector-icons": "^10.2.0"
+    "react-native-reanimated": "catalog:"
   },
   "devDependencies": {
     "@sispac/eslint-config": "workspace:*",
