--- a/apps/mobile/tsconfig.json
+++ b/apps/mobile/tsconfig.json
@@ -3,8 +3,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"],
-      "@expo-starter/ui/*": ["../../packages/ui/src/*"]
+      "@/*": ["./src/*"]
     },
     "strict": true,
     "allowJs": true,
