--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -10,16 +10,23 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^3.2.3",
+    "@expo/vector-icons": "^14.0.3",
+    "@gorhom/bottom-sheet": "4.6.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@sispac/tokens": "workspace:*",
     "@sispac/ui": "workspace:*",
+    "axios": "^1.7.7",
     "expo": "^51.0.32",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.23",
     "expo-status-bar": "~1.12.1",
+    "lodash.debounce": "^4.0.8",
     "nativewind": "catalog:",
     "react": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.2",
+    "react-native-maps": "1.14.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
@@ -33,6 +40,7 @@
     "@sispac/eslint-config": "workspace:*",
     "@sispac/prettier-config": "workspace:*",
     "@sispac/typescript-config": "workspace:*",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "~18.2.79",
     "@types/react-native": "^0.73.0",
     "babel-plugin-react-native-web": "^0.19.12",
